Added colon to js

--- a/style.css
+++ b/style.css
@@ -1,11 +1,7 @@
 /*
   Name: Petar Spasic
   Date: 10/25/2023
-  Here is my CSS file. Here are my rule sets to style my html files.
-*/
-
-/*
-  Note: This body rule set is to get you started
+  Here is my CSS file. Here are the rule sets to style my html files.
 */
 
 body {
